# ClipSync

./: Cargo.toml  README.md  package-lock.json  package.json  styles.css
src/: app.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: clip.rs  datatypes.rs  lib.rs  ws.rs
